@@ -1,3 +1,6 @@
+May 23, 2022
+  tuned up logging
+  
 Mar 28, 2022
   updated list of REF_RGD_IDs for GO pipelines to generate correct CREATION_DATE for IEA annotations
 
